[gd_scene load_steps=11 format=3 uid="uid://c62omjaenmum3"]

[ext_resource type="Script" path="res://Items/PhysicalItem.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://csbw4sy6lsxdi" path="res://Items/Effect_Fire.tscn" id="2"]

[sub_resource type="CylinderShape3D" id="1"]
height = 0.485003
radius = 0.0591003

[sub_resource type="StandardMaterial3D" id="2"]
transparency = 1
albedo_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
disable_receive_shadows = true

[sub_resource type="CylinderMesh" id="3"]
material = SubResource("2")
top_radius = 0.062
bottom_radius = 0.044
height = 0.45
radial_segments = 8
rings = 1

[sub_resource type="Animation" id="Animation_viwib"]
resource_name = "Flicker"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:light_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.8, 2.7, 3.3, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.694118, 0.635294, 0.164706, 1), Color(0.745098, 0.498039, 0.227451, 1), Color(0.756863, 0.278431, 0.172549, 1), Color(0.682353, 0.517647, 0.270588, 1), Color(0.905882, 0.654902, 0.454902, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1.8, 2.7, 3.3, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.0598478, 0.0562831), Vector3(-0.0569658, 0.0720218, -0.0654174), Vector3(0.0897182, -0.0512066, -0.0211456), Vector3(-0.0321483, -0.0536442, 0.00948164), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="6"]
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:light_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.8, 2.7, 3.3, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.694118, 0.635294, 0.164706, 1), Color(0.745098, 0.498039, 0.227451, 1), Color(0.756863, 0.278431, 0.172549, 1), Color(0.682353, 0.517647, 0.270588, 1), Color(0.905882, 0.654902, 0.454902, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1.8, 2.7, 3.3, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.0598478, 0.0562831), Vector3(-0.0569658, 0.0720218, -0.0654174), Vector3(0.0897182, -0.0512066, -0.0211456), Vector3(-0.0321483, -0.0536442, 0.00948164), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qm5q7"]
_data = {
"Flicker": SubResource("Animation_viwib"),
"TorchFlicker": SubResource("6")
}

[sub_resource type="StandardMaterial3D" id="4"]
albedo_color = Color(0.211765, 0.207843, 0.133333, 1)

[sub_resource type="CylinderMesh" id="5"]
material = SubResource("4")
top_radius = 0.071
bottom_radius = 0.062
height = 0.1
radial_segments = 8
rings = 1

[node name="Torch" type="RigidBody3D"]
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.123739, 0)
shape = SubResource("1")

[node name="Torch" type="MeshInstance3D" parent="."]
transform = Transform3D(0.921924, 0, 0.387371, 0, 1, 0, -0.387371, 0, 0.921924, 0, 0.106462, 0)
mesh = SubResource("3")

[node name="Fire" parent="Torch" instance=ExtResource("2")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 7.4506e-09, 0.5, -3.63798e-12, 0.293982, 0.000108909)

[node name="OmniLight3D" parent="Torch/Fire/Flame" index="0"]
omni_range = 9.0

[node name="AnimationPlayer" parent="Torch/Fire/Flame/OmniLight3D" index="0"]
libraries = {
"": SubResource("AnimationLibrary_qm5q7")
}
autoplay = "Flicker"

[node name="Dim" type="MeshInstance3D" parent="Torch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 1.49012e-08, 1, 0, 0.273669, 0.000108909)
visible = false
mesh = SubResource("5")

[editable path="Torch/Fire"]
